# id3lib

./: .cvsignore  AUTHORS  COPYING  ChangeLog  HISTORY  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  acconfig.h  aclocal.m4  config.h.in  config.h.win32  config.h.win32.in  config.win32  configure  configure.in  cvs2cl.pl  id3lib.spec.in  libtool  macconfig.h  makefile.win32  makewin32.bat  reconf
delphi/: ID3COM_TLB.pas  Unit1.pas  id3com.cfg  id3com.dof  id3com.dpr  readme.txt
doc/: .cvsignore  ChangeLog  Doxyfile.in  Makefile.am  Makefile.in  bugreport.txt  contact.txt  id3guide.html  id3libhistory.txt  id3v2-3.00.txt  index.html  index.html.in  logo.txt  musicmatch.txt  software.txt
doc/html/: Makefile.in
doc/latex/: Makefile.in
doc/man/: Makefile.in
doc/texinfo/: Makefile.in
examples/: .cvsignore  230-syncedlyrics.tag  230-unicode.tag  Makefile.am  Makefile.in  demo_convert.cpp  demo_convert_options.c  demo_convert_options.ggo  demo_convert_options.ggo.in  demo_copy.cpp  demo_copy_options.c  demo_copy_options.ggo  demo_copy_options.ggo.in  demo_info.cpp  demo_info_options.c  demo_info_options.ggo  demo_info_options.ggo.in  demo_main.cpp  demo_simple.c  demo_simple.cpp  demo_tag.cpp  demo_tag_options.c  demo_tag_options.ggo  demo_tag_options.ggo.in  findeng.cpp  findstr.cpp  get_pic.cpp  test_compression.cpp  test_file.cpp  test_frame.cpp  test_io.cpp  test_lib.cpp  test_pic.cpp  test_reader.cpp  test_remove.cpp  test_tag.cpp  test_uint28.cpp  test_unicode.cpp
id3com/: .cvsignore  BSTRCollection.h  EnumFields.cpp  EnumFields.h  ID3COM.rc  ID3COM_p.c  ID3Field.cpp  ID3Field.h  ID3Field.rgs  ID3Frame.cpp  ID3Frame.h  ID3Frame.rgs  ID3Tag.cpp  ID3Tag.h  ID3Tag.rgs  ID3Test.vbp  ID3Test.vbw  Makefile.am  Makefile.in  MimeTypes.cpp  MimeTypes.h  StdAfx.cpp  StdAfx.h  TextCollection.cpp  TextCollection.h  TextCollection.rgs  frmID3Test.frm  id3com.cpp  id3com.dsp  id3com.dsw  id3com.idl  mssccprj.scc  resource.h  vssver.scc  win32.readme.first.txt
id3com/Sample/: .cvsignore  ID3Test.vbp  ID3Test.vbw  MSSCCPRJ.SCC  Makefile.in  frmID3Test.frm
include/: Makefile  Makefile.am  Makefile.in  id3.h
include/dami/: dami.idl  io_base.h  lyr3.h  lyr3_impl.h  mm.h  mm_impl.h  v1.h  v1_impl.h
include/id3/: Makefile  Makefile.am  Makefile.in  common_ops.h  constants.h  conversion_ops.h  debug.h  details.h  dll.h  enums.h  error.h  externals.h  field.h  field_def.h  field_impl.h  flags.h  frame.h  frame_def.h  frame_header.h  frame_impl.h  genre.h  globals.h  header.h  header_frame.h  header_tag.h  helpers.h  id3lib_frame.h  id3lib_strings.h  int28.h  io_decorators.h  io_helpers.h  io_strings.h  lib.h  lyr3.h  lyr3_impl.h  macros.h  misc_support.h  mm.h  mm_impl.h  reader.h  (+20 more)
libprj/: Makefile.am  Makefile.in  id3lib.bpf  id3lib.bpr  id3lib.dsp  id3lib.dsw  win32.readme.first.txt
m4/: ChangeLog  Makefile.am  Makefile.in  id3_unicode.m4  sh_types.m4
orig/dll/: id3lib.h  readme.txt
orig/documentation/: id3guide.html  id3libhistory.txt
orig/source/examples/: demo_convert.cpp  demo_main.cpp
popt/: .cvsignore  Doxyfile  Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  libtool
popt/intl/: Makefile
popt/po/: Makefile  Makefile.in  sk.gmo
prj/: Makefile.am  Makefile.in  id3lib.bpf  id3lib.bpg  id3lib.bpr  id3lib.def  id3lib.dsp  id3lib.dsw  id3lib.mak  version.rc
src/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  binary_field.cpp  c_wrapper.cpp  codepageconvert.cpp  common_ops.cpp  conversion_ops.cpp  debug.cpp  debug.h  details.cpp  dll_wrapper.cpp  error.cpp  field.cpp  field_binary.cpp  field_def.h  field_defs.cpp  field_impl.h  field_integer.cpp  field_string_ascii.cpp  field_string_unicode.cpp  flags.h  frame.cpp  frame_def.h  frame_defs.cpp  frame_header.cpp  frame_impl.cpp  frame_impl.h  frame_parse.cpp  frame_render.cpp  genre.cpp  globals.cpp  header.cpp  header.h  header_frame.cpp  header_frame.h  header_tag.cpp  header_tag.h  helpers.cpp  (+31 more)
src/examples/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  demo_convert.cpp  demo_info.cpp  demo_strip.cpp  demo_tag.cpp  readme.txt
src/id3/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  dll.h  dll_wrapper.cpp  error.cpp  error.h  externals.h  field.cpp  field.h  field_binary.cpp  field_integer.cpp  field_string_ascii.cpp  field_string_unicode.cpp  frame.cpp  frame.h  frame_parse.cpp  frame_render.cpp  globals.h  header.cpp  header.h  header_frame.cpp  header_frame.h  header_tag.cpp  header_tag.h  int28.cpp  int28.h  misc_support.cpp  misc_support.h  sized_types.h  tag.cpp  tag.h  tag_file.cpp  tag_find.cpp  tag_parse.cpp  tag_parse_lyrics3.cpp  tag_parse_v1.cpp  tag_render.cpp  tag_sync.cpp  (+3 more)
zlib/: .cvsignore  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  libtool  reconf
zlib/include/: Makefile.in  zconf.h  zlib.h  zutil.h
zlib/lib/: Makefile.in
zlib/prj/: Makefile.in  zlib.bpf  zlib.bpr  zlib.dsp
zlib/src/: Makefile.am  Makefile.in  gzio.c  zutil.c
