# $Id$
# 
# Copyright (C) 1999 Scott Thomas Haug <sth2@cs.wustl.edu>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = reconf config.win32 acconfig
SUBDIRS = m4 doc src examples include prj zlib

# $Log$
# Revision 1.7  1999/12/03 14:10:11  scott
# (EXTRA_DIST): Added config.win32.
#
# Revision 1.6  1999/12/03 00:45:17  scott
# (SUBDIRS): Added prj and zlib
#
# Revision 1.5  1999/12/01 19:08:59  scott
# (SUBDIRS): Added "include".
#
# Revision 1.4  1999/11/30 19:54:08  scott
# (EXTRA_DIST): Removed ChangeLog, configure, HISTORY, and TODO.
# These are included in the distribution automatically.
#
