# Copyright (C) 1999 Scott Thomas Haug <sth2@cs.wustl.edu>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST =            \
  ChangeLog             \
  bugreport.txt         \
  contact.txt           \
  id3guide.html         \
  id3lib305.doc         \
  id3libhistory.txt     \
  id3v2-3.00.txt        \
  id3v2.gif             \
  id3v2.ico             \
  id3v2.png             \
  licence.txt           \
  logo.txt              \
  software.txt          \
  zlib_readme.txt       