# Copyright 2000 Scott Thomas Haug <sth2@cs.wustl.edu>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST =            \
        EnumFields.cpp  \
        EnumFields.h    \
        ID3COM.def      \
        ID3COM.rc       \
        ID3COMps.def    \
        ID3COMps.mk     \
        ID3Field.cpp    \
        ID3Field.h      \
        ID3Field.rgs    \
        ID3Frame.cpp    \
        ID3Frame.h      \
        ID3Frame.rgs    \
        ID3Tag.cpp      \
        ID3Tag.h        \
        ID3Tag.rgs      \
        Makefile.am     \
        StdAfx.cpp      \
        StdAfx.h        \
        dlldata.c       \
        frmID3Test.frm  \
        id3com.cpp      \
        id3com.dsp      \
        id3com.dsw      \
        id3com.idl      \
        mssccprj.scc    \
        resource.h      \
        vssver.scc
