# Copyright (C) 1999 Scott Thomas Haug <scott@id3.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

the_headers =                   \
  field.h                       \
  frame.h                       \
  globals.h                     \
  misc_support.h                \
  reader.h                      \
  readers.h                     \
  sized_types.h                 \
  spec.h                        \
  tag.h                         \
  writer.h                      \
  writers.h                     

id3includedir      = $(includedir)/id3
id3include_HEADERS = $(the_headers)

noinst_HEADERS =                \
  debug.h                       \
  field_def.h                   \
  field_impl.h                  \
  flags.h                       \
  frame_def.h                   \
  frame_impl.h                  \
  header.h                      \
  header_frame.h                \
  header_tag.h                  \
  helpers.h                     \
  io_decorators.h               \
  io_helpers.h                  \
  io_strings.h                  \
  strings.h                     \
  tag_impl.h                    \
  utils.h                       
